# vega

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LIBRARY_MODE_IMPL.md  PROGRESS.md  README.md  build.bat  compare_lightroom.md  gpu_impl.md  plan.md  vcpkg-configuration.json  vcpkg.json
.claude/: settings.json  settings.local.json
.claude/agents/: build-engineer.md  code-review-handler.md  code-reviewer-pro.md  cpp-pro.md  debugger-pro.md  game-developer.md  issue-resolver.md  performance-engineer.md  web-researcher.md
.claude/commands/: ask-deepwiki.md  council.md
.claude/commands/gh/: auto-review-loop.md  init-project.md  resolve-and-review.md
.claude/hooks/: inject-guidelines.sh
.claude/skills/claude-md-generator/: SKILL.md
.claude/skills/code-explorer/: SKILL.md
.claude/skills/cpp-build/: SKILL.md
.claude/skills/cpp-expert/: SKILL.md
.claude/skills/debugger/: SKILL.md
.claude/skills/dx11-gpu/: SKILL.md
.claude/skills/perf-profiler/: SKILL.md
.claude/skills/xlsx/: SKILL.md
resources/: language_seed.sql  vega.rc
resources/profiles/: README.md
shaders/: color_grading.hlsl  common.hlsli  crop_rotate.hlsl  demosaic.hlsl  denoise.hlsl  effects.hlsl  gamma_output.hlsl  histogram_compute.hlsl  hsl_adjust.hlsl  presence.hlsl  sharpen_usm.hlsl  tone_curve.hlsl  white_balance_exposure.hlsl
src/: CMakeLists.txt  main.cpp
src/catalog/: Database.cpp  Database.h  ImportManager.cpp  ImportManager.h  ThumbnailCache.cpp  ThumbnailCache.h
src/core/: Arena.h  CrashHandler.cpp  CrashHandler.h  Logger.cpp  Logger.h  Result.h  Settings.cpp  Settings.h  Timer.cpp  Timer.h  Types.h  UIStateDB.cpp  UIStateDB.h  WindowsIntegration.cpp  WindowsIntegration.h  i18n.cpp  i18n.h
src/export/: ExportManager.cpp  ExportManager.h
src/gpu/: ComputeShader.cpp  ComputeShader.h  ConstantBuffer.h  D3D11Context.cpp  D3D11Context.h  TexturePool.cpp  TexturePool.h
src/pipeline/: AutoTone.cpp  AutoTone.h  EditHistory.cpp  EditHistory.h  EditRecipe.cpp  EditRecipe.h  GPUPipeline.cpp  GPUPipeline.h  IProcessNode.h  Pipeline.cpp  Pipeline.h  PreviewManager.cpp  PreviewManager.h  SimplePipeline.cpp  SimplePipeline.h
src/pipeline/cpu/: BoxBlur.h  ColorSpaceNode.cpp  ColorSpaceNode.h  DenoiseNode.cpp  DenoiseNode.h  ExposureNode.cpp  ExposureNode.h  FastMath.h  HSLNode.cpp  HSLNode.h  SharpenNode.cpp  SharpenNode.h  ToneCurveNode.cpp  ToneCurveNode.h  WhiteBalanceNode.cpp  WhiteBalanceNode.h
src/raw/: ExifReader.cpp  ExifReader.h  RawDecoder.cpp  RawDecoder.h  RawImage.h
src/ui/: BeforeAfter.cpp  BeforeAfter.h  DevelopPanel.cpp  DevelopPanel.h  ExportDialog.cpp  ExportDialog.h  FolderPanel.cpp  FolderPanel.h  GridView.cpp  GridView.h  HistogramView.cpp  HistogramView.h  ImageViewport.cpp  ImageViewport.h  StatusBar.cpp  StatusBar.h  Toolbar.cpp  Toolbar.h
tests/: CMakeLists.txt  test_gpu_pipeline.cpp  test_i18n.cpp  test_pipeline.cpp
tests/test_data/: README.md
tools/: gen_langdb.cpp
